# Qol-Utils

./: CMakeLists.txt  README.md  about.md  mod.json
.github/scripts/: bump_version.py  validate_editor_features.py
.github/workflows/: action.yml  build.yml  multi-platform.yml  test.yml
src/: MyButtonSettingV3.cpp  MyCustomSettingV3.cpp
